<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_configuracion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hkmexico.lloeza.ejemplousb.Configuracion">


    <TextView
        android:text="@string/Bauds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/Bauds" />

    <TextView
        android:text="@string/Datos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SpBauds"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/Datos" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/SpBauds"
        android:layout_below="@+id/Bauds"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/SpDatos"
        android:layout_below="@+id/Datos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Stop"
        android:layout_below="@+id/SpDatos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Stop"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/spStop" />

    <TextView
        android:text="@string/Paridad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spStop"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/paridad" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paridad"
        android:layout_centerHorizontal="true"
        android:id="@+id/spParidad" />

    <TextView
        android:text="@string/Control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Control"
        android:layout_below="@+id/spParidad"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Control"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/spControl" />

    <Button
        android:text="@string/Defaults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Reset"
        android:layout_below="@+id/spControl"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp" />
</RelativeLayout>
